name:                hasbolt
version:             0.1.0.2
synopsis:            Haskell driver for Neo4j 3+ (BOLT protocol)
description:         Please see README.md
homepage:            https://github.com/zmactep/hasbolt#readme
license:             BSD3
license-file:        LICENSE
author:              Pavel Yakovlev
maintainer:          pavel@yakovlev.me
copyright:           Copyright: (c) 2016 Pavel Yakovlev
category:            Database
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Database.Bolt
  other-modules:       Database.Bolt.Value.Type
                     , Database.Bolt.Value.Helpers
                     , Database.Bolt.Value.Instances
                     , Database.Bolt.Value.Structure
                     , Database.Bolt.Connection.Type
                     , Database.Bolt.Connection.Instances
                     , Database.Bolt.Connection.Pipe
                     , Database.Bolt.Connection
                     , Database.Bolt.Record
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , text
                     , containers
                     , binary
                     , data-binary-ieee754
                     , transformers
                     , network
                     , network-simple
                     , data-default
                     , hex
  default-language:    Haskell2010

test-suite hasbolt-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hasbolt
                     , hspec
                     , QuickCheck
                     , hex
                     , text
                     , containers
                     , bytestring
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/zmactep/hasbolt
