name:                hasbolt
version:             0.1.1.2
synopsis:            Haskell driver for Neo4j 3+ (BOLT protocol)
description:
  Haskell driver for Neo4j 3+ (BOLT protocol).
  .
  The package covers:
  .
    -Data serialization and deserialization
  .
    -Nodes, relationships and paths support
  .
    -Cypher queries and responses
  .
    -Authentification
  .
  The code was tested with neo4j versions 3.0 and 3.1


homepage:            https://github.com/zmactep/hasbolt#readme
license:             BSD3
license-file:        LICENSE
author:              Pavel Yakovlev, Martin Heuschober
maintainer:          pavel@yakovlev.me
copyright:           Copyright: (c) 2016 Pavel Yakovlev
category:            Database
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Database.Bolt
  other-modules:       Database.Bolt.Value.Type
                     , Database.Bolt.Value.Helpers
                     , Database.Bolt.Value.Instances
                     , Database.Bolt.Value.Structure
                     , Database.Bolt.Connection.Type
                     , Database.Bolt.Connection.Instances
                     , Database.Bolt.Connection.Pipe
                     , Database.Bolt.Connection
                     , Database.Bolt.Record
  build-depends:       base >= 4.8 && < 5
                     , bytestring >= 0.10.8.1 && < 0.11
                     , text >= 1.2.2.1 && < 1.3
                     , containers >= 0.5.7.1 && < 0.6
                     , binary >= 0.8.3.0 && < 1.0
                     , data-binary-ieee754 >= 0.4.4 && < 0.5
                     , transformers >= 0.5.2.0 && < 0.6
                     , network >= 2.6.3.1 && < 2.7
                     , network-simple >= 0.4.0.5 && < 0.5
                     , data-default >= 0.7.1.1 && < 0.8
                     , hex >= 0.1.2 && < 0.2
  default-language:    Haskell2010
  ghc-options:       -Wall -O2

test-suite hasbolt-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base >= 4.8 && < 5
                     , hasbolt
                     , hspec >= 2.4.1 && < 2.5
                     , QuickCheck >= 2.9.2 && < 2.10
                     , hex
                     , text
                     , containers
                     , bytestring
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/zmactep/hasbolt
