name:                hasbolt
version:             0.1.6.2
synopsis:            Haskell driver for Neo4j 3+ (BOLT protocol)
description:
  Haskell driver for Neo4j 3+ (BOLT protocol).
  .
  The package covers:
  .
    -Data serialization and deserialization
  .
    -Nodes, relationships and paths support
  .
    -Cypher queries and responses
  .
    -Transactions and error handling
  .
    -Authentification
  .
    -TLS/SSL connection
  .
    -Bolt protocol version 3 initial support
  .
  The code was tested with neo4j versions 3.0 — 3.5 and GrapheneDB service


homepage:            https://github.com/zmactep/hasbolt#readme
license:             BSD3
license-file:        LICENSE
author:              Pavel Yakovlev, Martin Heuschober
maintainer:          pavel@yakovlev.me
copyright:           (c) 2018 Pavel Yakovlev
category:            Database
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

tested-with:
  GHC ==8.6.5
   || ==8.8.4
   || ==8.10.7
   || ==9.0.2
   || ==9.2.2

library
  hs-source-dirs:      src
  exposed-modules:     Database.Bolt
                     , Database.Bolt.Lazy
                     , Database.Bolt.Lens
                     , Database.Bolt.Serialization
  other-modules:       Database.Bolt.Value.Type
                     , Database.Bolt.Value.Helpers
                     , Database.Bolt.Value.Instances
                     , Database.Bolt.Connection.Connection
                     , Database.Bolt.Connection.Type
                     , Database.Bolt.Connection.Instances
                     , Database.Bolt.Connection.Pipe
                     , Database.Bolt.Connection
                     , Database.Bolt.Record
                     , Database.Bolt.Transaction
  build-depends:       base >= 4.7 && < 5
                     , bytestring >= 0.10.8.1 && < 0.12
                     , text >= 1.2.2.1 && < 1.3
                     , containers >= 0.5.7.1 && < 0.7
                     , binary >= 0.8.3.0 && < 1.0
                     , data-binary-ieee754 >= 0.4.4 && < 0.5
                     , mtl >= 2.2.0 && < 2.3
                     , network >= 2.6.3.1 && < 3.2
                     , connection >= 0.2.8 && < 0.4
                     , data-default >= 0.7.1.1 && < 0.8
                     , deepseq >= 1.4 && < 1.5
                     , deepseq-generics >= 0.2.0.0 && < 0.3
  if impl(ghc < 8.6)
    build-depends:     contravariant >= 1.4.1 && < 1.6
  if impl(ghc < 8.0)
    build-depends:     fail >= 4.9 && < 5
  default-language:    Haskell2010
  ghc-options:       -Wall

-- test-suite transaction
--   type:                exitcode-stdio-1.0
--   hs-source-dirs:      test
--   main-is:             TransactionSpec.hs
--   build-depends:       base >= 4.8 && < 5
--                      , hasbolt
--                      , hspec >= 2.4.1 && < 2.9
--                      , QuickCheck >= 2.9 && < 2.14
--                      , data-default
--                      , text
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   default-language:    Haskell2010

test-suite hasbolt-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Hex
  build-depends:       base >= 4.7 && < 5
                     , hasbolt
                     , hspec >= 2.4.1 && < 2.9
                     , QuickCheck >= 2.9 && < 2.15
                     , text
                     , containers
                     , binary
                     , bytestring
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

benchmark hasbolt-bench
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench
  main-is:             Main.hs
  build-depends:       base >= 4.7 && < 5
                     , base64-bytestring >= 1.1 && < 1.3
                     , binary
                     , bytestring
                     , criterion
                     , data-default
                     , hasbolt
                     , hspec >= 2.4.1 && < 2.9
  ghc-options:         -threaded -rtsopts -eventlog
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/zmactep/hasbolt
